<h5>5.01 Beta 5 [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.8
<hr>
- removed NEWBB_ADMIN_DEFINED from admin.php (JJDai)
- fixed "Parameter must be an array or an object that implements Countable" (cesagonchu/mamba)
- changed _MD_NEWBB_NEWBB_TYPE to _MD_NEWBB_TYPE (alain01/mamba)
- remove Google Plus icon (cesagonchu/mamba)
- fix Undefined variable: postParentObject in form.post.php #77 (cesagonchu/mamba)

<h5>5.01 Beta 4 [2021-03-21]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.16, PHP 8.0.3
<hr>
- Update functions.image.php (BigKev73)
- various cosmetics/updates (mamba)
- add TestdataButtons.php (mamba)


<h5>5.01 Beta 3 [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.2
<hr>
- 'isset' replaced with coalesce (mamba)
- rename $newbbpermHandler (mamba)
- update  PHPDoc Return type (mamba)
- Cascading dirname(...) calls (mamba)
- fix Insecure 'htmlspecialchars(...)' usage (mamba)
- Assignment in condition (mamba)
- Update functions.image.php: removes the forced height value from the image (BigKev73)
- fix moving a Topic (BigKev73)
- Force the reloading of viewforum page when the browser back button is used. PR #92 (BigKev73)
- Force the reloading of index page when the browser back button is used. PR #93 (BigKev73)
- get the next unread post ID based on the $lastreadpost_id PR #94 (BigKev73)
- add support jumping to the next post after the LastReadPost PR #95 (BigKev73)

<h5>5.01 Beta 2 [2021-01-28]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- Added to make jump ICON, jump and scroll to the correct "last post" (BigKev73)
- Added addition modifications to make "last post" links scroll to correct location on page (BigKev73)
- Added additional changes for scrolling to last post (BigKev73)
- fix when trying to permanately delete a deleted post reports no selection made. (BigKev73)
- Changes to fix logic issues with creating thumbnails, setting the thumbnail path and setting the img_info string (BigKev73)
