@@ -1,7 +1,7 @@
 <?php
 
 $moduleDirName      = \basename(\dirname(__DIR__));
-$moduleDirNameUpper = mb_strtoupper($moduleDirName);
+$moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
 // extra module configs
 $modversion['config'][] = [
