@@ -5,10 +5,10 @@
  */
 
 $moduleDirName      = \basename(\dirname(__DIR__));
-$moduleDirNameUpper = mb_strtoupper($moduleDirName);
+$moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
 return [
-    'name'          => mb_strtoupper($moduleDirName) . ' PathConfigurator',
+    'name'          => \mb_strtoupper($moduleDirName) . ' PathConfigurator',
     'dirname'       => $moduleDirName,
     'admin'         => XOOPS_ROOT_PATH . '/modules/' . $moduleDirName . '/admin',
     'modPath'       => XOOPS_ROOT_PATH . '/modules/' . $moduleDirName,
