@@ -39,7 +39,7 @@ function xoops_module_uninstall_newbb(\XoopsModule $module)
     //    return true;
 
     $moduleDirName      = \basename(\dirname(__DIR__));
-    $moduleDirNameUpper = mb_strtoupper($moduleDirName);
+    $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
     $helper = Helper::getInstance();
     $utility = new Utility();
 
