@@ -31,7 +31,7 @@ require \dirname(__DIR__) . '/preloads/autoloader.php';
 $op = Request::getCmd('op', '');
 
 $moduleDirName      = \basename(\dirname(__DIR__));
-$moduleDirNameUpper = mb_strtoupper($moduleDirName);
+$moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
 $helper = Helper::getInstance();
 // Load language files
@@ -64,7 +64,7 @@ function loadSampleData()
 {
     global $xoopsConfig;
     $moduleDirName      = \basename(\dirname(__DIR__));
-    $moduleDirNameUpper = mb_strtoupper($moduleDirName);
+    $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
     $utility      = new Utility();
     $configurator = new Configurator();
@@ -105,7 +105,7 @@ function saveSampleData()
 {
     global $xoopsConfig;
     $moduleDirName      = \basename(\dirname(__DIR__));
-    $moduleDirNameUpper = mb_strtoupper($moduleDirName);
+    $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
     $helper             = Helper::getInstance();
     $tables             = $helper->getModule()->getInfo('tables');
 
@@ -134,7 +134,7 @@ function saveSampleData()
 function exportSchema()
 {
     $moduleDirName      = \basename(\dirname(__DIR__));
-    $moduleDirNameUpper = mb_strtoupper($moduleDirName);
+    $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 
     try {
         // TODO set exportSchema
@@ -204,7 +204,7 @@ function loadTableFromArrayWithReplace($table, $data, $search, $replace)
 
 function clearSampleData(){
     $moduleDirName      = \basename(\dirname(__DIR__));
-    $moduleDirNameUpper = mb_strtoupper($moduleDirName);
+    $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
     $helper             = Helper::getInstance();
     // Load language files
     $helper->loadLanguage('common');
