@@ -1,10 +1,16 @@
-<h5>5.01 Beta 5 [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.22, PHP 8.0.8
+<h5>5.01 Beta 5 [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.26, PHP 8.0.13, PHP 8.1.0
 <hr>
 - removed NEWBB_ADMIN_DEFINED from admin.php (JJDai)
 - fixed "Parameter must be an array or an object that implements Countable" (cesagonchu/mamba)
 - changed _MD_NEWBB_NEWBB_TYPE to _MD_NEWBB_TYPE (alain01/mamba)
 - remove Google Plus icon (cesagonchu/mamba)
 - fix Undefined variable: postParentObject in form.post.php #77 (cesagonchu/mamba)
+- semantic versioning (mamba)
+- changed font-weight to "initial" (heyula/mamba)
+- cosmetics and PHP 8 adjustments (mamba)
+
+
+
 
 <h5>5.01 Beta 4 [2021-03-21]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.16, PHP 8.0.3
 <hr>
